Packet Manager, 1.17, Java 16